# qubit-experiment

./: .gitignore  0807.ipynb  0808lab.ipynb  AGENTS.md  CALIBRATION.ipynb  CR.ipynb  KRISS_CALIBRATION copy.ipynb  README.md  applications_test.ipynb  custom_pulse_library.py  fstate.ipynb  helper.py  mj.ipynb  operations.py  options.py  pulse_shaping.ipynb  pyproject.toml  setup_test.ipynb  sqnl_test.ipynb  sweep_test.ipynb
analysis/: __init__.py  calibration_traces_rotation.py  coherence_spectroscopy.py  coherence_spectroscopy_echo.py  dispersive_shift.py  drag_q_scaling.py  echo.py  fitting_helpers.py  hamiltonian_tomography.py  iq_blobs.py  iq_cloud.py  iq_time_trace.py  iq_traj.py  iq_traj_blobs.py  linear_phase_delay.py  measure_gain_curve.py  multiplexed_iq_blobs.py  new_rip_echo.py  plot_theme.py  plotting_helpers.py  ramsey.py  readout_amplitude_sweep.py  readout_frequency_sweep.py  readout_integration_delay_sweep.py  readout_length_sweep.py  readout_mid_sweep.py  readout_multiplexed_optimization.py  residual_zz_echo.py  resonator_spectroscopy.py  rip.py  scan_pump_parameters.py  scresonators_adapter.py  signal_propagation_delay.py  skill-rule-compliance-report-2026-03-04.md  skill-rule-compliance-report-2026-03-05.md  three_qubit_state_tomography.py  time_rabi.py  time_rabi_chevron.py  time_traces.py  trajectory.py  (+1 more)
custom_instructions/: complex_resonator_analysis_example.py  example_complex_resonator_model.ipynb
examples/: 0909  0909_0.1  0909_0.2  0909_0.3  0909_0.4  0909_0.5  0909_0.6  0909_e_0.0  0909_e_0.1  0909_e_0.2  0909_e_0.3  0909_e_0.4  0909_e_0.5  0909_e_0.6  0909_e_m_0.0  0909_e_m_0.1  0909_e_m_0.2  0909_e_m_0.3  0909_e_m_0.4  0909_e_m_0.5  0909_e_m_0.6  0909_g_m_0.0  0909_g_m_0.1  0909_g_m_0.2  0909_g_m_0.3  0909_g_m_0.4  0909_g_m_0.5  0909_g_m_0.6  0909n_e_0.0  0909n_e_0.1  0909n_e_0.2  0909n_e_0.3  0909n_e_0.4  0909n_e_0.5  0909n_e_0.6  0909n_e_m_0.0  0909n_e_m_0.1  0909n_e_m_0.2  0909n_e_m_0.3  0909n_e_m_0.4  (+36 more)
experiments/: __init__.py  coherence_spectroscopy.py  coherence_spectroscopy_echo.py  direct_cr_hamiltonian_tomography.py  dispersive_shift.py  drag_q_scaling.py  echo.py  iq_blobs.py  iq_cloud.py  iq_cloud_common.py  iq_time_trace.py  iq_traj.py  iq_traj_blobs.py  measure_gain_curve.py  measurement_qndness.py  modified.py  modified_ramsey.py  multiplexed_iq_blobs.py  multiplexed_iq_blobs_common.py  new_coherence_spectroscopy.py  new_rip_echo.py  nondsl_direct_cr_hamiltonian_tomography.py  old_rip_echo.py  qubit_gate_spectroscopy_amplitude.py  qubit_spectroscopy.py  qubit_spectroscopy_amplitude.py  ramsey.py  readout_amplitude_sweep.py  readout_frequency_sweep.py  readout_integration_delay_sweep.py  readout_length_sweep.py  readout_mid_sweep.py  readout_multiplexed_optimization.py  residual_zz_echo.py  resonator_spectroscopy.py  rip.py  rip2.py  rip3.py  rip4.py  rip5.py  (+7 more)
helper_functions/: __init__.py  helper.py
projects/: README.md
qpu_types/: __init__.py  bus.py  transmon.py
qubit_experiment/: __init__.py  devpaths.py  helper.py  operations.py
qubit_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qubit_parameters/: 20250731-2240_flast.json  20250804-1515_1st.json  20250804-1753_dinner.json  20250804-1836_dinner.json  20250804-1913_dumb.json  20250804-1943_dumb.json  20250804-1947_dumb.json  20250804-2105_sleep.json  20250818-0046_kaist.json  20250819-1054_kaist.json  20250822-1731_kaist.json
tests/: test_bootstrap_notebook.py  test_bus_cavity_drive_p.py  test_coherence_tracking.py  test_devpaths.py  test_iq_cloud_assignment.py  test_iq_cloud_bootstrap.py  test_iq_cloud_common.py  test_plot_theme.py  (+15 more)
(+276 files in other folders)
