[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubit-experiment"
version = "0.1.0"
description = "Custom LabOne Q experiments and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Y. Ahn" }
]
keywords = ["laboneq", "quantum", "experiments", "analysis", "zhinst"]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "uncertainties>=3.1",
  "lmfit>=1.2",
  "laboneq>=25.10,<26",                # core SDK (validated in local .venv)
  "laboneq-applications>=25.10,<26"    # workflow/analysis contracts
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.8",
  "pytest>=7.4",
  "ipykernel",
  "jupyter"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = [
  "qubit_experiment*",
]
exclude = [
  "tests*",
  "examples*",
  "projects*",
  "tmp*",
  "skills*",
  "example_helpers*",
]

[tool.setuptools.package-data]
# Include any static artifacts produced/saved by workflows if needed
"*" = [
  "*.json",
  "*.yaml",
  "*.yml",
  "*.txt"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "W",   # warnings
]
ignore = [
  "E203", # whitespace before ':' (compatible with black)
  "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
